modules/core/client/scss/core.scss
/* ... */
.navbar-sm .form-control {
	height: 30px;
	padding: 5px 10px;
	font-size: 12px;
	line-height: 1.5;
	border-radius: 3px;
}
.navbar-sm .navbar-text {
	font-size: 12px;
	margin-top: 14px;
	margin-bottom: 14px;
}
h1.page-title {
	padding: 0;
	color: $header-grey;
	margin-top: 0;
	margin-bottom: 20px;
}
h2.page-title {
	padding: 0;
	color: $header-grey;
	font-size: 1em;
	margin: 0 2px 0;
}
.navbar-nav > li > a {padding-top:10px !important; padding-bottom:10px !important;}



.edit-outlines .text-block {
	border: 2px dotted $brand-info;
	padding: 3px;
	border-radius: 8px;
	cursor: pointer;
	background-color: transparent;
}
.edit-outlines .text-block-success {
	border: 2px dotted $brand-success;
	background-color: transparent;
	padding-left: 5px;
	padding-right: 5px;
}
.text-block > p:last-child {
	margin-bottom: 0;
}

.edit-outlines .text-block:focus,
.edit-outlines .text-block-focus {
	border: 2px dashed $brand-info;
	outline: none !important;
	background-color: #d9edf7;
}

.doc-detail-col {
	border-right: 1px solid $border-grey;
	overflow: hidden;
	padding-right: 0;
}

.doc-action-col {
	text-align: center;
	font-size: 2rem;
	padding-top: 5px;
	padding-left: 0;
}

.doc-action-col a {
	display: block;
	text-align: center;
	overflow: hidden;
	white-space: nowrap;
}

.well hr {
	border-top: 1px solid $border-grey;
	margin-top: 5px;
	margin-bottom: 8px;
}

.glyphicon-refresh-animate {
    -animation: spin .7s infinite linear;
    -ms-animation: spin .7s infinite linear;
    -webkit-animation: spinw .7s infinite linear;
    -moz-animation: spinm .7s infinite linear;
}

@keyframes spin {
    from {
    	-webkit-transform: rotate(0deg);
    	-moz-transform: rotate(0deg);
    	transform: scale(1) rotate(0deg);
    }
    to {
    	-webkit-transform: rotate(360deg);
    	-moz-transform: rotate(360deg);
    	transform: scale(1) rotate(360deg);
    }
}

@-webkit-keyframes spinw {
    from {
    	-webkit-transform: rotate(0deg);
    	-moz-transform: rotate(0deg);
    	transform: scale(1) rotate(0deg);
    }
    to {
    	-webkit-transform: rotate(360deg);
    	-moz-transform: rotate(360deg);
    	transform: scale(1) rotate(360deg);
    }
}

@-moz-keyframes spinm {
    from {
    	-webkit-transform: rotate(0deg);
    	-moz-transform: rotate(0deg);
    	transform: scale(1) rotate(0deg);
    }
    to {
    	-webkit-transform: rotate(360deg);
    	-moz-transform: rotate(360deg);
    	transform: scale(1) rotate(360deg);
    }
}

/*
//-------------------
// Schedule D3 Styles
// -------------------
*/

.schedule-control-cell {
	padding: 0 !important;
	position: relative;
}
.svg-div-root {
	position: absolute;
	top:0;left:0;bottom:0;right:0;
	overflow: hidden;
}

.svg-element{
	position: relative;
	width: 100%;
}

.svg-background{
	fill: lightyellow;
	fill-opacity: 0.3;
}

.projectToday-line {
	stroke: darkorange;
	stroke-width: .5;
	fill: none;
}


.list-array-item {
	margin-bottom: 3px;
	padding: 3px 5px;
}

/*
// --------------------------
// ng-table and form styles
// --------------------------
*/

.ng-table-pager {
	border-top: 1px solid $border-grey;
	padding: 15px;
	overflow: auto;
}

/*
// -------------------
// template styles
// -------------------
*/

.template {
  background-color: #ffffff;
  padding:10px;
}

.template h1,
.template li,
.template p,
.template div {
	font-family: $font-family-sans-serif;
}

.template-subitem {
	margin-left:10px;
}

.template ol[type="1"].template-hierarchy li {
  font-weight: bold;
  font-size: 28px;
  color: #65909a;
}

.template ol[type="a"].template-hierarchy li {
  font-weight: bold;
  font-size: 24px;
  color: #9a6590;
  margin-top:10px;
}

.template ol[type="i"].template-hierarchy li {
  font-weight: bold;
  font-size: 20px;
  color: #909a65;
  margin-top:10px;
}

.template .letter-head {
  text-align: center;
  font-weight:bold;
}

.template .letter-section {
  margin-top:40px;
}

.template .custom-list {
  margin: 16px 0;
  padding-left: 20px;
}

.template .letter-footer {
  margin-top:100px;
}

.template .note-box-xlrg {
  border: 1px solid #000;
  margin: 10px 0;
  padding: 5px;
}

.template .note-box-lrg {
  border: 1px solid #000;
  margin: 10px 15px;
  padding: 5px;
}

.template .note-box-med {
  border: 1px solid #000;
  margin: 10px 30px;
  padding: 5px;
}

.template .note-box-sml {
  border: 1px solid #000;
  margin: 10px 45px;
  padding: 5px;
}

.template .title-box {
  background-color: #d3d3d3;
  border: 1px solid #000;
  padding: 5px;
}

.template .center {
  text-align: center;
}

.template .page-header {
  font-weight: bold;
  border-bottom: 2px solid #000;
  margin-bottom: 20px;
  padding: 3px;
}

.template .indent-sml {
  padding-left: 10px;
}

.template .indent-med {
  padding-left: 20px;
}

.template .indent-lrg {
  padding-left: 30px;
}

.template tr.spaceUnder > td
{
  padding-bottom: 5px;
}

.template .title-pg {
  margin: 150px 0;
}

.template .title-pg-space {
  margin-top: 100px;
}

.template .title-pg-txt-lrg {
  font-weight: bold;
  font-size: 50px;
}

.template .title-pg-in-txt-lrg {
  font-weight: bold;
  font-size: 28px;
  color: #336699;
}

.template .title-pg-txt-med {
  font-weight: bold;
  font-size: 24px;
}

.template .title-pg-in-txt-med {
  font-weight: bold;
  font-size: 24px;
  color: #336699;
}

.template .title-pg-txt-sml {
  font-size: 10px;
}

.template .section-header-lrg {
  font-weight: bold;
  font-size: 26px;
}

.template .section-header-med {
  font-weight: bold;
  font-size: 19px;
}

.template .section-header-sml {
  font-weight: bold;
  font-size: 16px;
}

.template table.air-table {
  width: 100%;
  border: 1px solid black;
  border-collapse: collapse;
  margin: 10px 0;
}

.template table.air-table td {
  border: 1px solid black;
  border-collapse: collapse;
  font-size: 11px;
  padding: 5px;
}

.template table.air-table thead tr td {
  font-weight: bold;
  text-align: center;
  background-color: #D9D9D9;
}

.template .letter-section-sub {
  margin-top:30px;
}
/* ... */

